--- a/css/global.scss
+++ b/css/global.scss
@@ -9,25 +9,13 @@
 
 $font-size-titel: 30px;
 $font-size-text: 16px;
-$font-color-light: #d2d7dd;
-$font-color-dark: #202124;
 
 // colors
 
-$color-background-light: #fafaf2;
-$color-background-dark: #28282b;
+$color-pallete-name: #fff;
+$color-pallete-name: #fff;
 
-$color-element-red: #bf484e;
-$color-element-purple: #6e408a;
-$color-element-sand: #fad5a5;
-
-// transition
-
-$transition-duration: 0.5s;
-$transition-delay: 0.1s;
-$transition: all 1s;
-
-// ******************************************************************** ...
+// ******************************************************************** GLOBAL
 
 * {
     margin: 0;
@@ -42,7 +30,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background-color: $color-element-sand;
+    background-color: #fff;
 }
 
 // ******************************************************************** ...
