--- a/css/login/login.css
+++ b/css/login/login.css
@@ -1,13 +1,21 @@
+@font-face {
+  font-family: face;
+  src: url(../);
+}
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
+  list-style: none;
+  font-family: sans-serif;
 }
 
+html,
 body {
-  background-color: #435165;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
 }
 
 .login {
@@ -16,7 +24,6 @@ body {
   box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
   margin: 100px auto;
 }
-
 .login h1 {
   text-align: center;
   color: #5b6574;
@@ -24,14 +31,12 @@ body {
   padding: 20px 0 20px 0;
   border-bottom: 1px solid #dee0e4;
 }
-
 .login form {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 20px;
 }
-
 .login form label {
   display: flex;
   justify-content: center;
@@ -41,8 +46,13 @@ body {
   background-color: #3274d6;
   color: #ffffff;
 }
-
-.login form input[type=password],
+.login form input[type=password] {
+  width: 310px;
+  height: 50px;
+  border: 1px solid #dee0e4;
+  margin-bottom: 20px;
+  padding: 0 15px;
+}
 .login form input[type=text] {
   width: 310px;
   height: 50px;
@@ -50,7 +60,6 @@ body {
   margin-bottom: 20px;
   padding: 0 15px;
 }
-
 .login form input[type=submit] {
   width: 100%;
   padding: 15px;
@@ -62,7 +71,6 @@ body {
   color: #ffffff;
   transition: background-color 0.2s;
 }
-
 .login form input[type=submit]:hover {
   background-color: #2868c7;
   transition: background-color 0.2s;
@@ -74,21 +82,15 @@ body {
   width: 100%;
   border: 0;
 }
-
 .navtop div {
   display: flex;
   margin: 0 auto;
   width: 1000px;
   height: 100%;
 }
-
-.navtop div h1,
-.navtop div a {
+.navtop div h1 {
   display: inline-flex;
   align-items: center;
-}
-
-.navtop div h1 {
   flex: 1;
   font-size: 24px;
   padding: 0;
@@ -96,18 +98,17 @@ body {
   color: #eaebed;
   font-weight: normal;
 }
-
 .navtop div a {
+  display: inline-flex;
+  align-items: center;
   padding: 0 20px;
   text-decoration: none;
   color: #c1c4c8;
   font-weight: bold;
 }
-
 .navtop div a i {
   padding: 2px 8px 0 0;
 }
-
 .navtop div a:hover {
   color: #eaebed;
 }
@@ -120,7 +121,6 @@ body.loggedin {
   width: 1000px;
   margin: 0 auto;
 }
-
 .content h2 {
   margin: 0;
   padding: 25px 0;
@@ -128,28 +128,35 @@ body.loggedin {
   border-bottom: 1px solid #e0e0e3;
   color: #4a536e;
 }
-
-.content > p,
-.content > div {
+.content p {
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
   margin: 25px 0;
   padding: 25px;
   background-color: #fff;
 }
-
-.content > p table td,
-.content > div table td {
+.content p table td {
   padding: 5px;
 }
-
-.content > p table td:first-child,
-.content > div table td:first-child {
+.content p table td:first-child {
   font-weight: bold;
   color: #4a536e;
   padding-right: 15px;
 }
-
-.content > div p {
+.content div {
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+  margin: 25px 0;
+  padding: 25px;
+  background-color: #fff;
+}
+.content div table td {
+  padding: 5px;
+}
+.content div table td:first-child {
+  font-weight: bold;
+  color: #4a536e;
+  padding-right: 15px;
+}
+.content div p {
   padding: 5px;
   margin: 0 0 10px 0;
 }/*# sourceMappingURL=login.css.map */
