--- a/css/login/login.css
+++ b/css/login/login.css
@@ -18,6 +18,66 @@ body {
   background-color: #fff;
 }
 
+#main-content {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+#page-background {
+  width: 30%;
+  height: 100%;
+  background-color: #85d109;
+  position: absolute;
+  z-index: 0;
+}
+
+#login-box {
+  width: 88%;
+  height: 80%;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 10px 32px 0px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+}
+#login-box #login-box-left {
+  background-image: url("/assets/images/backgroundGroen.png");
+  background-position: left;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 27.25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#login-box #login-box-left img {
+  width: 60%;
+}
+#login-box #login-box-right {
+  width: 72.75%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#login-box #login-box-right #welcome-message {
+  text-align: center;
+  margin-bottom: 10%;
+}
+#login-box #login-box-right #welcome-message #titel {
+  color: #85d109;
+  font-size: 70px;
+}
+#login-box #login-box-right #welcome-message #info {
+  color: #85d109;
+  font-size: 20px;
+}
 .login {
   width: 400px;
   background-color: #ffffff;
