--- a/css/login/login.css
+++ b/css/login/login.css
@@ -68,7 +68,7 @@ body {
 }
 #login-box #login-box-right #welcome-message {
   text-align: center;
-  margin-bottom: 10%;
+  text-transform: uppercase;
 }
 #login-box #login-box-right #welcome-message #titel {
   color: #85d109;
@@ -77,7 +77,94 @@ body {
 #login-box #login-box-right #welcome-message #info {
   color: #85d109;
   font-size: 20px;
+  font-weight: bold;
 }
+#login-box #login-box-right #input-fields {
+  width: 50%;
+  height: 40%;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+#login-box #login-box-right #input-fields #username {
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+  border-bottom: black solid 3px;
+}
+#login-box #login-box-right #input-fields #username::-moz-placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields #username:-ms-input-placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields #username::placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields #username:focus-visible {
+  outline: none;
+}
+#login-box #login-box-right #input-fields #password {
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+  border-bottom: black solid 3px;
+}
+#login-box #login-box-right #input-fields #password::-moz-placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields #password:-ms-input-placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields #password::placeholder {
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields #password:focus-visible {
+  outline: none;
+}
+#login-box #login-box-right #input-fields #login-button {
+  background-color: #85d109;
+  border: none;
+  border-radius: 5px;
+  height: 40px;
+  margin-top: 5%;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
+#login-box #login-box-right #input-fields #login-button:hover {
+  transform: scale(1.05);
+  transition: 0.1s;
+}
+
 .login {
   width: 400px;
   background-color: #ffffff;
