--- a/css/login/login.scss
+++ b/css/login/login.scss
@@ -97,7 +97,8 @@ body {
 
         #welcome-message {
             text-align: center;
-            margin-bottom: 10%;
+            text-transform: uppercase;
+            // padding-bottom: 15px;
             #titel {
                 color: $color-GLRgroen;
                 font-size: 70px;
@@ -106,17 +107,84 @@ body {
             #info {
                 color: $color-GLRgroen;
                 font-size: 20px;
+                font-weight: bold;
             }
         }
 
         #input-fields {
+            width: 50%;
+            height: 40%;
+            padding-top: 20px;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+
             #username {
+                width: 100%;
+                height: 40px;
+
+                text-align: center;
+                color: black;
+                font-size: 20px;
+                font-weight: bold;
+
+                border: none;
+                border-bottom: black solid 3px;
+
+                &::placeholder {
+                    text-align: center;
+                    color: black;
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+
+                &:focus-visible {
+                    outline: none;
+                }
             }
 
             #password {
+                width: 100%;
+                height: 40px;
+
+                text-align: center;
+                text-align: center;
+                color: black;
+                font-size: 20px;
+                font-weight: bold;
+
+                border: none;
+                border-bottom: black solid 3px;
+
+                &::placeholder {
+                    text-align: center;
+                    color: black;
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+
+                &:focus-visible {
+                    outline: none;
+                }
             }
 
             #login-button {
+                background-color: $color-GLRgroen;
+                border: none;
+                border-radius: 5px;
+
+                height: 40px;
+                margin-top: 5%;
+
+                color: white;
+                font-size: 20px;
+                font-weight: bold;
+
+                &:hover{
+                    transform: scale(1.05);
+                    transition: 0.1s;
+                }
             }
         }
     }
