--- a/css/studenenToevoegen/studenenToevoegen.scss
+++ b/css/studenenToevoegen/studenenToevoegen.scss
@@ -34,17 +34,113 @@ body {
     width: 100%;
     height: 100%;
     background-color: #fff;
+
+    display: flex;
 }
 
 // ******************************************************************** ...
 
 #main-content {
+    flex-grow: 2;
     width: 100%;
     height: 100vh;
     position: relative;
 }
 
 // ******************************************************************** ...
+
+#tab-nav {
+    #tab-title {
+        p {
+        }
+    }
+
+    #tabs {
+        p {
+        }
+    }
+}
+
+#content {
+    .box {
+    }
+    #toevoegen {
+        h1 {
+        }
+
+        #box-toevoegen {
+            #naam {
+                .titel {
+                }
+
+                .input-box {
+                }
+            }
+
+            #geboortedatum {
+                .titel {
+                }
+
+                .input-box {
+                }
+            }
+
+            #geslacht {
+                .titel {
+                }
+
+                .input-box {
+                }
+            }
+
+            #email {
+                .titel {
+                }
+
+                .input-box {
+                }
+            }
+
+            .btn-toevoeg {
+            }
+        }
+    }
+
+    #importeren {
+        h1 {
+        }
+
+        #box-toevoegen {
+            p {
+            }
+
+            #voorbeeld-bestand {
+            }
+
+            #drag-drop {
+                #drag-name {
+                }
+
+                #of-name {
+                }
+
+                #selecteer-bestand {
+                }
+            }
+
+            #scheidlijn {
+            }
+
+            #bestanden {
+                text {
+                }
+            }
+
+            .btn-toevoeg {
+            }
+        }
+    }
+}
 
 // ******************************************************************** ...
 
