--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -42,8 +42,9 @@ body {
 // ******************************************************************** NAVBAR
 
 .navbar{
+    flex-grow: 1;
     background-color: $color-GLRgroen;
-    width: 150px;
+    max-width: 150px;
     height: 100vh;
 
 
