--- a/css/navbar.css
+++ b/css/navbar.css
@@ -21,8 +21,9 @@ body {
 }
 
 .navbar {
+  flex-grow: 1;
   background-color: #85D109;
-  width: 150px;
+  max-width: 150px;
   height: 100vh;
 }
 .navbar .navbarLine {
