--- a/css/studentenLijst/studentenLijst.css
+++ b/css/studentenLijst/studentenLijst.css
@@ -15,7 +15,69 @@
 
 html,
 body {
+  display: flex;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #F5F7FA;
+}
+
+#main-content {
+  display: flex;
+  flex-grow: 2;
+  flex-direction: column;
+}
+
+#tab-nav {
+  position: relative;
+  height: 150px;
+  background-color: gray;
+}
+
+#zoeken-en-filter {
+  display: flex;
+}
+
+#zoeken {
+  position: relative;
+  margin: 10px 0 0 10px;
+  text-align: center;
+  border: none;
+  width: 200px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 10px rgba(152, 152, 152, 0.1450980392);
+}
+
+#filter, #filter-submit {
+  position: relative;
+  height: 30px;
+  top: 60%;
+  left: 30px;
+  transform: translate(0, -50%);
+  box-shadow: 0px 0px 10px rgba(152, 152, 152, 0.1450980392);
+}
+
+#filter {
+  border: none;
+  border-radius: 5px;
+  padding: 0 10px;
+}
+
+#filter-submit {
+  border: none;
+  border-radius: 5px;
+  left: 40px;
+  width: 120px;
+  background-color: #85D109;
+}
+
+#student-table {
+  position: relative;
+  left: 3vw;
+  width: 75vw;
+  text-align: center;
+}
+#student-table #student {
+  background-color: #000000;
 }/*# sourceMappingURL=studentenLijst.css.map */
