--- a/css/studentenLijst/studentenLijst.scss
+++ b/css/studentenLijst/studentenLijst.scss
@@ -34,9 +34,74 @@ $color-letters: #000000;
 
 html,
 body {
+    display: flex;
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: $color-background;
 }
 
-// ******************************************************************** NAVBAR
+// ******************************************************************** MAINCONTENT
+#main-content{
+    display: flex;
+    flex-grow: 2;
+    flex-direction: column;
+}
+// ******************************************************************** TAB-NAV
+#tab-nav{
+    position: relative;
+    height: 150px;
+    background-color: gray;
+}
+
+// ******************************************************************** STUDENTENLIJST ZOEKEN EN FILTER
+#zoeken-en-filter{
+    display: flex;
+}
+#zoeken{
+    position: relative;
+    margin: 10px 0 0 10px;
+    text-align: center;
+    border: none;
+    width: 200px;
+    height: 40px;
+    border-radius: 8px;
+    background-color: $color-white;
+    box-shadow: 0px 0px 10px $color-dropshadow;
+}
+
+#filter, #filter-submit{
+    position: relative;
+    height: 30px;
+    top: 60%;
+    left: 30px;
+    transform: translate(0, -50%);
+    box-shadow: 0px 0px 10px $color-dropshadow;
+
+}
+
+#filter{
+    border: none;
+    border-radius: 5px;
+    padding: 0 10px;
+}
+#filter-submit{
+    border: none;
+    border-radius: 5px;
+    left: 40px;
+    width: 120px;
+    background-color: $color-GLRgroen;
+}
+
+
+// ******************************************************************** STUDENTENLIJST TABLE
+#student-table{
+    position: relative;
+    left: 3vw;
+    width: 75vw;
+    text-align: center;
+
+    #student{
+        background-color: #000000;
+    }
+}
+
