--- a/css/studenenToevoegen/studenenToevoegen.scss
+++ b/css/studenenToevoegen/studenenToevoegen.scss
@@ -34,13 +34,13 @@ body {
     width: 100%;
     height: 100%;
     background-color: #fff;
-
     display: flex;
 }
 
 // ******************************************************************** ...
 
 #main-content {
+    display: flex;
     flex-grow: 2;
     width: 100%;
     height: 100vh;
