--- a/css/studenenToevoegen/studenenToevoegen.css
+++ b/css/studenenToevoegen/studenenToevoegen.css
@@ -16,10 +16,43 @@ body {
   width: 100%;
   height: 100%;
   background-color: #fff;
+  display: flex;
 }
 
 #main-content {
+  display: flex;
+  flex-grow: 2;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
   position: relative;
+}
+
+#tab-nav {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 20px;
+}
+#tab-nav #tab-title {
+  width: 100%;
+  height: 50px;
+  padding: 0px 40px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
+}
+#tab-nav #tab-title p {
+  font-size: 30px;
+}
+#tab-nav #tabs {
+  width: 100%;
+  height: 50px;
+  padding: 20px 40px;
+  border-bottom: 2px solid lightgray;
+  display: flex;
+}
+#tab-nav #tabs p {
+  align-self: center;
+  font-size: 20px;
+  margin-right: 35px;
 }/*# sourceMappingURL=studenenToevoegen.css.map */
