--- a/css/studentenLijst/studentenLijst.css
+++ b/css/studentenLijst/studentenLijst.css
@@ -29,7 +29,7 @@ body {
 
 #tab-nav {
   position: relative;
-  height: 150px;
+  height: 100px;
   background-color: gray;
 }
 
@@ -39,7 +39,7 @@ body {
 
 #zoeken {
   position: relative;
-  margin: 10px 0 0 10px;
+  margin: 30px 0 0 30px;
   text-align: center;
   border: none;
   width: 200px;
@@ -49,12 +49,12 @@ body {
   box-shadow: 0px 0px 10px rgba(152, 152, 152, 0.1450980392);
 }
 
-#filter, #filter-submit {
+#filter,
+#filter-submit {
   position: relative;
   height: 30px;
-  top: 60%;
+  margin: 35px 0 0 0;
   left: 30px;
-  transform: translate(0, -50%);
   box-shadow: 0px 0px 10px rgba(152, 152, 152, 0.1450980392);
 }
 
@@ -72,12 +72,70 @@ body {
   background-color: #85D109;
 }
 
-#student-table {
+.responsive-table {
   position: relative;
-  left: 3vw;
-  width: 75vw;
+  margin: 10px 30px;
   text-align: center;
 }
-#student-table #student {
-  background-color: #000000;
+.responsive-table li {
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+.responsive-table .table-header {
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+}
+.responsive-table .table-row {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 10px 0px rgba(152, 152, 152, 0.1450980392);
+}
+.responsive-table .col-1 {
+  flex-basis: 20%;
+}
+.responsive-table .col-2 {
+  flex-basis: 5%;
+}
+.responsive-table .col-3 {
+  flex-basis: 15%;
+}
+.responsive-table .col-4 {
+  flex-basis: 15%;
+}
+.responsive-table .col-5 {
+  flex-basis: 20%;
+}
+.responsive-table .col-6 {
+  flex-basis: 5%;
+}
+.responsive-table .col-7 {
+  flex-basis: 10%;
+}
+.responsive-table .col-8 {
+  flex-basis: 10%;
+}
+@media all and (max-width: 1000px) {
+  .responsive-table .table-header {
+    display: none;
+  }
+  .responsive-table li {
+    display: block;
+  }
+  .responsive-table .col {
+    flex-basis: 100%;
+  }
+  .responsive-table .col {
+    display: flex;
+    padding: 10px 0;
+  }
+  .responsive-table .col:before {
+    color: #6C7A89;
+    padding-right: 10px;
+    content: attr(data-label);
+    flex-basis: 50%;
+    text-align: right;
+  }
 }/*# sourceMappingURL=studentenLijst.css.map */
