--- a/css/studentenLijst/studentenLijst.scss
+++ b/css/studentenLijst/studentenLijst.scss
@@ -41,25 +41,27 @@ body {
 }
 
 // ******************************************************************** MAINCONTENT
-#main-content{
+#main-content {
     display: flex;
     flex-grow: 2;
     flex-direction: column;
 }
+
 // ******************************************************************** TAB-NAV
-#tab-nav{
+#tab-nav {
     position: relative;
-    height: 150px;
+    height: 100px;
     background-color: gray;
 }
 
 // ******************************************************************** STUDENTENLIJST ZOEKEN EN FILTER
-#zoeken-en-filter{
+#zoeken-en-filter {
     display: flex;
 }
-#zoeken{
+
+#zoeken {
     position: relative;
-    margin: 10px 0 0 10px;
+    margin: 30px 0 0 30px;
     text-align: center;
     border: none;
     width: 200px;
@@ -69,22 +71,25 @@ body {
     box-shadow: 0px 0px 10px $color-dropshadow;
 }
 
-#filter, #filter-submit{
+#filter,
+#filter-submit {
     position: relative;
     height: 30px;
-    top: 60%;
+    margin: 35px 0 0 0;
+    // top: 50%;
     left: 30px;
-    transform: translate(0, -50%);
+    // transform: translate(0, -50%);
     box-shadow: 0px 0px 10px $color-dropshadow;
 
 }
 
-#filter{
+#filter {
     border: none;
     border-radius: 5px;
     padding: 0 10px;
 }
-#filter-submit{
+
+#filter-submit {
     border: none;
     border-radius: 5px;
     left: 40px;
@@ -94,14 +99,89 @@ body {
 
 
 // ******************************************************************** STUDENTENLIJST TABLE
-#student-table{
+.responsive-table {
     position: relative;
-    left: 3vw;
-    width: 75vw;
+    margin: 10px 30px;
     text-align: center;
 
-    #student{
-        background-color: #000000;
+    li {
+        border-radius: 10px;
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 25px;
+    }
+
+    .table-header {
+        font-size: 14px;
+        text-transform: uppercase;
+        letter-spacing: 0.03em;
+    }
+
+    .table-row {
+        background-color: #ffffff;
+        box-shadow: 0px 0px 10px 0px $color-dropshadow;
+    }
+
+    .col-1 {
+        flex-basis: 20%;
+    }
+
+    .col-2 {
+        flex-basis: 5%;
+    }
+
+    .col-3 {
+        flex-basis: 15%;
+    }
+
+    .col-4 {
+        flex-basis: 15%;
+    }
+
+    .col-5 {
+        flex-basis: 20%;
+    }
+
+    .col-6 {
+        flex-basis: 5%;
+    }
+
+    .col-7 {
+        flex-basis: 10%;
+    }
+    .col-8 {
+        flex-basis: 10%;
+    }
+
+    @media all and (max-width: 1000px) {
+        .table-header {
+            display: none;
+        }
+
+        .table-row {}
+
+        li {
+            display: block;
+        }
+
+        .col {
+
+            flex-basis: 100%;
+
+        }
+
+        .col {
+            display: flex;
+            padding: 10px 0;
+
+            &:before {
+                color: #6C7A89;
+                padding-right: 10px;
+                content: attr(data-label);
+                flex-basis: 50%;
+                text-align: right;
+            }
+        }
     }
 }
-
