--- a/css/login/login.css
+++ b/css/login/login.css
@@ -18,6 +18,14 @@ body {
   background-color: #fff;
 }
 
+::-moz-selection {
+  background: #85d109;
+}
+
+::selection {
+  background: #85d109;
+}
+
 #main-content {
   width: 100%;
   height: 100vh;
