--- a/css/studenenToevoegen/studenenToevoegen.scss
+++ b/css/studenenToevoegen/studenenToevoegen.scss
@@ -34,8 +34,12 @@ html,
 body {
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: $color-background;
     display: flex;
+}
+
+::selection {
+    background: $color-GLRgroen;
 }
 
 // ******************************************************************** ...
@@ -50,119 +54,247 @@ body {
     position: relative;
 }
 
-// ******************************************************************** ...
+// ******************************************************************** TAB NAV
 
 #tab-nav {
     width: 100%;
-    height: 100px;
-    margin-bottom: 20px;
+    height: 140px;
+    // margin-bottom: 20px;
 
     #tab-title {
         width: 100%;
-        height: 50px;
+        height: 70px;
         padding: 0px 40px;
         display: flex;
         align-items: center;
         border-bottom: 1px solid lightgray;
 
-
         p {
-            font-size: 30px;
+            font-size: 25px;
         }
     }
 
     #tabs {
         width: 100%;
-        height: 50px;
+        height: 70px;
         padding: 20px 40px;
         border-bottom: 2px solid lightgray;
 
-
         display: flex;
+
         p {
             align-self: center;
-            font-size: 20px;
+            font-size: 18px;
             margin-right: 35px;
+            font-weight: lighter;
+        }
+
+        #current-page {
+            color: $color-GLRgroen;
+            font-weight: bold;
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                top: 43px;
+                left: 0;
+
+                width: 100%;
+                height: auto;
+                border-bottom: 3px solid $color-GLRgroen;
+            }
         }
     }
 }
 
+// ******************************************************************** CONTENT
+
 #content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
     .box {
+        background-color: white;
+        width: 100%;
+        height: 90%;
+        border-radius: 8px;
+        padding: 50px 70px;
     }
+
+    .btn-toevoeg {
+        background-color: $color-GLRgroen;
+        border: none;
+        border-radius: 5px;
+
+        height: 60px;
+        margin-top: 5%;
+
+        color: white;
+        font-size: 20px;
+        font-weight: bolder;
+
+        &:hover {
+            transform: scale(1.05);
+            transition: 0.1s;
+        }
+    }
+
     #toevoegen {
+        height: 100%;
+        flex-grow: 2;
+        padding: 80px 40px 80px 80px;
+
         h1 {
+            height: 10%;
+            padding: 20px 40px;
         }
 
         #box-toevoegen {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+
+            .titel {
+                font-size: 18px;
+                padding: 5px 10px;
+                font-weight: lighter;
+            }
+            .input-box {
+                border-radius: 8px;
+                border: 1px solid #aaa;
+                width: 100%;
+                height: 60px;
+
+                padding: 0px 20px;
+                font-size: 15px;
+                font-weight: normal;
+            }
             #naam {
-                .titel {
-                }
-
-                .input-box {
-                }
             }
+            #toevoeg-wrapper {
+                display: flex;
 
-            #geboortedatum {
-                .titel {
+                #geboortedatum {
+                    flex-grow: 1;
+                    padding-right: 20px;
+                    #geboortedatum-input {
+                    }
                 }
 
-                .input-box {
-                }
-            }
+                #geslacht {
+                    flex-grow: 1;
+                    padding-left: 20px;
+                    position: relative;
 
-            #geslacht {
-                .titel {
-                }
+                    &::after {
+                        content: "🢓";
+                        position: absolute;
+                        pointer-events: none;
 
-                .input-box {
+                        right: 15px;
+                        bottom: -20px;
+                        font-size: 50px;
+
+                        width: auto;
+                        height: auto;
+                        color: #bebebe;
+                    }
+
+                    #geslacht-input {
+                        appearance: none;
+
+                        * {
+                            font-weight: normal;
+                        }
+                    }
                 }
             }
 
             #email {
-                .titel {
-                }
-
-                .input-box {
-                }
-            }
-
-            .btn-toevoeg {
             }
         }
     }
 
     #importeren {
+        height: 100%;
+        flex-grow: 1;
+        padding: 80px 30px;
+
         h1 {
+            height: 10%;
+            padding: 20px 40px;
         }
 
-        #box-toevoegen {
+        #box-importeren {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            justify-content: space-evenly;
+
             p {
+                font-size: 18px;
+                padding: 5px 10px;
+                font-weight: lighter;
             }
 
             #voorbeeld-bestand {
+                font-weight: bold;
+                text-decoration: underline;
+                margin-bottom: 20px;
             }
 
             #drag-drop {
+                align-self: center;
+                width: 80%;
+                height: 40%;
+
+                border-radius: 8px;
+                border: 2px dotted gray;
+                background-color: #dfdfdf;
+                color: gray;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin-bottom: 20px;
+
                 #drag-name {
+                    width: 100%;
+                    font-weight: 600;
                 }
 
                 #of-name {
+                    font-size: 15px;
+                    margin: 20px 0px;
+                    font-weight: 600;
                 }
 
                 #selecteer-bestand {
+                    width: 80%;
+                    height: 40px;
+
+                    color: white;
+                    font-size: 15px;
+                    font-weight: bold;
+                    align-self: center;
                 }
             }
 
             #scheidlijn {
+                width: 90%;
+                align-self: center;
+                margin-bottom: 20px;
             }
 
             #bestanden {
-                text {
-                }
-            }
+                width: 100%;
+                height: auto;
 
-            .btn-toevoeg {
+                font-weight: normal;
+                text-align: center;
             }
         }
     }
