--- a/css/studenenToevoegen/studenenToevoegen.scss
+++ b/css/studenenToevoegen/studenenToevoegen.scss
@@ -259,28 +259,64 @@ body {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                align-items: center;
                 margin-bottom: 20px;
+                padding: 20px;
+                position: relative;
+
+                #file-input {
+                    width: 100%;
+                    height: 100%;
+                    text-align: center;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    text-align: center;
+                    padding: 80px;
+
+                    &::-webkit-file-upload-button {
+                        width: 60%;
+                        height: 40px;
+
+                        color: white;
+                        font-size: 15px;
+                        font-weight: bold;
+                        align-self: center;
+
+                        background-color: $color-GLRgroen;
+                        border: none;
+                        border-radius: 5px;
+
+                        height: 60px;
+                        margin-top: 5%;
+                        padding: 10px;
+
+                        color: white;
+                        font-size: 20px;
+                        font-weight: bolder;
+
+                        &:hover {
+                            transform: scale(1.05);
+                            transition: 0.1s;
+                        }
+                    }
+                }
 
                 #drag-name {
                     width: 100%;
                     font-weight: 600;
+                    position: absolute;
+                    top: 15%;
                 }
 
                 #of-name {
                     font-size: 15px;
-                    margin: 20px 0px;
+                    margin: 20px 0px 0px 0px;
                     font-weight: 600;
+                    position: absolute;
+                    top: 25%;
                 }
 
-                #selecteer-bestand {
-                    width: 80%;
-                    height: 40px;
-
-                    color: white;
-                    font-size: 15px;
-                    font-weight: bold;
-                    align-self: center;
-                }
             }
 
             #scheidlijn {
