--- a/css/studentenLijst/studentenLijst.css
+++ b/css/studentenLijst/studentenLijst.css
@@ -36,9 +36,46 @@ body {
 }
 
 #tab-nav {
+  width: 100%;
+  height: 140px;
+}
+#tab-nav #tab-title {
+  width: 100%;
+  height: 70px;
+  padding: 0px 40px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid lightgray;
+}
+#tab-nav #tab-title p {
+  font-size: 25px;
+}
+#tab-nav #tabs {
+  width: 100%;
+  height: 70px;
+  padding: 20px 40px;
+  border-bottom: 2px solid lightgray;
+  display: flex;
+}
+#tab-nav #tabs p {
+  align-self: center;
+  font-size: 18px;
+  margin-right: 35px;
+  font-weight: lighter;
+}
+#tab-nav #tabs #current-page {
+  color: #85D109;
+  font-weight: bold;
   position: relative;
-  height: 100px;
-  background-color: gray;
+}
+#tab-nav #tabs #current-page::after {
+  content: "";
+  position: absolute;
+  top: 43px;
+  left: 0;
+  width: 100%;
+  height: auto;
+  border-bottom: 3px solid #85D109;
 }
 
 #zoeken-en-filter {
