--- a/css/studentenLijst/studentenLijst.scss
+++ b/css/studentenLijst/studentenLijst.scss
@@ -51,11 +51,58 @@ body {
     flex-direction: column;
 }
 
-// ******************************************************************** TAB-NAV
+// ******************************************************************** TAB NAV
+
 #tab-nav {
-    position: relative;
-    height: 100px;
-    background-color: gray;
+    width: 100%;
+    height: 140px;
+    // margin-bottom: 20px;
+
+    #tab-title {
+        width: 100%;
+        height: 70px;
+        padding: 0px 40px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid lightgray;
+
+        p {
+            font-size: 25px;
+        }
+    }
+
+    #tabs {
+        width: 100%;
+        height: 70px;
+        padding: 20px 40px;
+        border-bottom: 2px solid lightgray;
+
+        display: flex;
+
+        p {
+            align-self: center;
+            font-size: 18px;
+            margin-right: 35px;
+            font-weight: lighter;
+        }
+
+        #current-page {
+            color: $color-GLRgroen;
+            font-weight: bold;
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                top: 43px;
+                left: 0;
+
+                width: 100%;
+                height: auto;
+                border-bottom: 3px solid $color-GLRgroen;
+            }
+        }
+    }
 }
 
 // ******************************************************************** STUDENTENLIJST ZOEKEN EN FILTER
