--- a/css/studentenLijst/studentenLijst.scss
+++ b/css/studentenLijst/studentenLijst.scss
@@ -52,7 +52,9 @@ body {
 }
 
 // ******************************************************************** TAB NAV
-
+a{
+    color: black;
+}
 #tab-nav {
     width: 100%;
     height: 140px;
