--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -83,7 +83,7 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
 }
-.items > div > p{
+.items > div > a > p{
     text-align: center;
 }
 .items:hover{
